msal-angular-fe.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: angularfe
  namespace: pm-ingress
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: angularfe
    spec:
      containers:
      - name: angularfe
        image: priyanko83/angularfe:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: priyankodockerhubregistrykey
---
apiVersion: v1
kind: Service
metadata:
  name: angularfelb
  namespace: pm-ingress
spec:
  ports:
  - port: 80
  selector:
    app: angularfe
