old.producapi.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: productapi
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: productapi
    spec:
      containers:
      - name: productapi
        image: containerstore.azurecr.io/productapi:latest
		imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-auth
---
apiVersion: v1
kind: Service
metadata:
  name: productapi
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: productapi
