dockersol-ingress-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pm-ingress-backend
  namespace: poc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - pm-aks-microservices.centralindia.cloudapp.azure.com
    secretName: pm-ingress-microservices-tls
  rules:
  - host: pm-aks-microservices.centralindia.cloudapp.azure.com
    http:
      paths:
      - path: /gatewayapi(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gatewayapi
            port:
              number: 80
      - path: /customerapi(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: customerapi
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pm-ingress-frontend
  namespace: poc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - pm-aks-microservices.centralindia.cloudapp.azure.com
    secretName: pm-ingress-microservices-tls
  rules:
  - host: pm-aks-microservices.centralindia.cloudapp.azure.com
    http:
      paths:
      - path:  /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-react-service
            port:
              number: 80
      - path: /ng(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-angular-service
            port:
              number: 80
